--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
-        "svelte": "^3.1.0",
+        "svelte": "^3.16.1",
         "svelte-loader": "^2.13.4",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "serialize-javascript": "^2.1.1"
     }
 }
